Add ability to select confidence level from event tag

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,15 +17,17 @@ pipenv
 platformdirs
 pyasn1
 pycparser
-pymisp
+pymisp~=2.5.4
 pyrsistent
 python-dateutil
 PyYAML
-requests
+requests~=2.32.3
 requests-futures
 rsa
 six
-urllib3
+urllib3~=2.3.0
 virtualenv
 virtualenv-clone
 wrapt
+
+azure-core~=1.32.0
